--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,15 @@
   </head>
   <body>
     <!-- Fonts to support Material Design -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
+    /> -->
     <!-- Icons to support Material Design -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    /> -->
     <div id="root"></div>
   </body>
 </html>
