working on rendering components

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+  <!-- <body>
     <!-- Fonts to support Material Design -->
     <link
       rel="stylesheet"
@@ -17,5 +17,5 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <div id="root"></div>
-  </body>
+  </body> -->
 </html>
